# DataLad-desktop

./: .gitignore  .gitlab-ci.yml  README.md  package-lock.json  package.json
.github/workflows/: build-os-artifacts.yml  rust-bridge-validation.yml  smoke-cross-platform.yml  test-coverage.yml
docs/: presentation-slides-de.md  roadmap.md
docs/architecture/: datalad-adapter-interface.md  datalad-adapter.md
docs/product/: researcher-workflow.md
e2e/: busy-state.e2e.mjs  button-gating.e2e.mjs  electron-driver.mjs  fixtures.mjs  fs-watch.e2e.mjs
native/rust-core-node/: .gitignore  Cargo.toml  README.md  index.js  package-lock.json  package.json
native/rust-core-node/src/: lib.rs
rust-core/: Cargo.toml  README.md
rust-core/src/: adapter.rs  diagnostics.rs  lib.rs  process_runner.rs
src/: index.js
src/datalad/: adapter.js  console-command.js  diagnostics.js  errors.js  process-runner.js  rust-bridge.js  schema.js  status.js
src/gui/: fs-watch.js  main.js  preload.js  refresh-debounce.js  watch-ignore.js
src/gui/assets/icons/: datalad_desktop.icns
src/gui/renderer/: app.js  button-gating.js  index.html  project-health-chips.js  save-gating.js  styles.css
test/: adapter-parity.test.js  adapter.test.js  button-gating.test.js  console-command.test.js  errors.test.js  process-runner.test.js  project-health-chips.test.js  refresh-debounce.test.js  rust-bridge.test.js  save-gating.test.js  schema.test.js  status.test.js  watch-ignore.test.js
